--- a/GD1.html
+++ b/GD1.html
@@ -36,7 +36,7 @@
         },
         methods: {
             belajar(pelajaran) {
-                return 'Aku sedang belajar ${pelajaran}';
+                return `Aku sedang belajar ${pelajaran}`;
             },
         },
     });
